--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="dark" lang="de">
   <head>
     <meta charset="utf-8" />
     <title>AngularStarter3</title>
@@ -8,6 +8,10 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root></app-root>
+    <app-root>
+      <div class="loading-container">
+        <i class="pi pi-spin pi-spinner text-blue-500 text-4xl"></i>
+      </div>
+    </app-root>
   </body>
 </html>
