fixed lint error

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
-    <app-root>
+    <sf-root>
       <div class="loading-container">
         <i class="pi pi-spin pi-spinner text-blue-500 text-4xl"></i>
       </div>
-    </app-root>
+    </sf-root>
   </body>
 </html>
